@@ -10,17 +10,6 @@ BUGS
   ppdfile=/etc/foomatic/<queue_name>.ppd to the printcap entry (for
   use with gpr)
 
-- when changing only the config file, instances seem to be lost
-  (probably discarded because they are not related to an existing
-  printer, then not reloaded)
-
-- maybe a configChanged() should be issued when saving the instances
-  file to force a printer reload in the print dialog.
-
-- fix conflicting/not working shortcuts:
-	. Properties.. (kprintdialog.cpp)
-	. Other (kpqtpage.cpp)
-
 
 WISHES
 ------
