@@ -540,3 +540,9 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
   * general: added a small (but useful) information string about the
     current plugin below the plugin combobox (ex: in CUPS, shows the current
     server:port).
+
+02/04/2002 Michael Goffioul <goffioul@imec.be>
+  * general:
+  	. fixed various conflicting shortcuts
+	. made KMVirtualManager inherit from KPReloadObject to force instance
+	  reloading when something has changed
